# agent-island-public

./: .gitignore  CODEOWNERS  README.md  engine-quips-plan.md  pyproject.toml  research-questions.md
back_catalog/confessionals/: main.py  pyproject.toml
back_catalog/deliberations/: player_config_est.toml  player_config_summary.toml  (+2 more)
beginnings/: README.md  main.py  pyproject.toml
beginnings/examples/: debug_20250706_135943.txt  gameplay_20250706_135943.txt
confessionals/: README.md  logs.py  main.py  round_phases.py
context_management/: example.py  logo.txt  logs.py  pyproject.toml
deliberations/: README.md  client_factory.py  engine.py  example.py  history.py  logs.css  logs.py  main.py  openrouter.py  or_test.py  player.py  player_config.py  player_config.toml  player_config_small.toml  pyproject.toml  round.py  round_phases.py  run_game.py
deliberations/game_engine/: __init__.py  engine.py  history.py  llm_response.py  memory.py  player.py  round.py  round_phases.py
docs/: scoring.typ
examples/: README.md  game_config.toml  game_config_5.toml  game_config_bogus_phase.toml  game_config_no_logs.toml  game_config_no_summ.toml  gameplay_801adbf5-cad2-4461-9485-863dfd948000.html  human_player_config.toml  human_summarization_config.toml  logs.css  logs.py  player_config.toml  player_config_3_sonnet.toml  player_config_5.toml  player_config_5_sonnet.toml  player_config_bad_type.toml  player_config_bad_votes.toml  player_config_invalid.toml  player_config_mixed.toml  player_config_small_summ.toml  quips_game_config.toml  quips_player_config.toml  sidebars_extended_game_config.toml  sidebars_game_config.toml
(+33 files in other folders)
