[project]
name = "agent-island"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Connacher Murphy", email = "connacher.murphy@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openrouter>=0.1.3",
    "python-dotenv>=0.9.9",
]

[project.scripts]
agent-island = "agent_island.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
# Standard linting rules
lint.select = ["E", "F", "I", "W"]
line-length = 88
target-version = "py312"

# Exclude common non-source directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
    "back_catalog",
]

[tool.ruff.lint.isort]
known-first-party = ["agent_island"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
