[project]
name = "deliberations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "llm-wrapper",
    "openrouter>=0.1.3",
]

[tool.uv.sources]
llm-wrapper = { git = "https://github.com/connachermurphy/llm-wrapper.git", rev = "c3e96b2" }
